Add more fonts to html, move background to header, change container bootstrap type, change paddings and font-size in list-group

--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,16 @@ body {
   background-color: #fff;
 }
 
-.container-fluid {
-  color: #fff;
+header {
   background-image: url(https://i.postimg.cc/Tw2C8cNY/header-bg.jpg);
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
   height: 100vh;
+}
+
+.container {
+  color: #fff;
 }
 
 .name {
@@ -33,18 +36,19 @@ body {
   letter-spacing: 2px;
   color: #fed136;
   font-family: "Great Vibes", cursive;
-  padding: 0 0 0 200px;
+  padding: 0 0 0 100px;
   letter-spacing: 4px;
 }
 
 .list-group {
   margin-top: 25px;
+  font-size: 13px;
 }
 
 .list-group > li {
   display: inline-block;
   list-style-type: none;
-  padding: 0 25px;
+  padding: 0 15px;
   letter-spacing: 2px;
   position: relative;
 }
@@ -102,9 +106,9 @@ body {
 }
 
 .btn {
-  margin: 24px auto 0 auto;
+  margin: 40px auto 0 auto;
   padding: 16px;
-  border-radius: 1px;
+  border-radius: 2px;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   text-align: center;
@@ -112,5 +116,7 @@ body {
   cursor: pointer;
   border: none;
   background-color: #fed136;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 /*# sourceMappingURL=style.css.map */
