--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ header {
   font-family: "Great Vibes", cursive;
   padding: 0 0 0 100px;
   letter-spacing: 4px;
+  line-height: 1.3;
 }
 
 .list-group {
@@ -103,20 +104,22 @@ header {
   text-transform: uppercase;
   margin: 0 0 30px;
   letter-spacing: 3px;
+  padding-bottom: 10px;
 }
 
 .btn {
   margin: 40px auto 0 auto;
-  padding: 16px;
-  border-radius: 2px;
+  padding: 19px 50px;
+  border-radius: 4px;
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  border: none;
+  border: 1px solid #fed136;
   background-color: #fed136;
   text-transform: uppercase;
   font-weight: 500;
+  line-height: 1.3;
 }
 /*# sourceMappingURL=style.css.map */
