--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,7 @@ header{
     font-family: $font-two;
     padding: 0 0 0 100px;
     letter-spacing: 4px;
+    line-height: 1.3;
     
 }
 .list-group {
@@ -102,18 +103,20 @@ header{
     text-transform: uppercase;
     margin: 0 0 30px;
     letter-spacing: 3px;
+    padding-bottom: 10px;
 }
 .btn {
     margin: 40px auto 0 auto;
-    padding: 16px;
-    border-radius: 2px;
+    padding: 19px 50px;
+    border-radius: 4px;
     font-family: $font-main;
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
     text-decoration: none;
     cursor: pointer;
-    border:none;
+    border: 1px solid $color-one;
     background-color: $color-one;
     text-transform: uppercase;
     font-weight: 500;
+    line-height: 1.3;
 }
