--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 /* Variables */
 /* Golden */
 /* yellow */
-/* v.light grey */
+/* v.light grey for background */
+/* light grey for text */
 /* Global */
 *, *::before, *::after {
   box-sizing: border-box;
@@ -10,24 +11,25 @@
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-size: 13px;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #6c757d;
   text-align: left;
   background-color: #fff;
 }
 
+.container {
+  height: 100vh;
+}
+
+/* Header */
 header {
+  color: #fff;
   background-image: url(https://i.postimg.cc/Tw2C8cNY/header-bg.jpg);
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-  height: 100vh;
-}
-
-.container {
-  color: #fff;
 }
 
 .name {
@@ -43,7 +45,6 @@ header {
 
 .list-group {
   margin-top: 25px;
-  font-size: 13px;
 }
 
 .list-group > li {
@@ -96,7 +97,7 @@ header {
   font-weight: 400;
   padding: 100px 0 0;
   text-transform: capitalize;
-  margin-bottom: 5px;
+  margin-bottom: 7px;
 }
 
 .splash h1 {
@@ -122,4 +123,6 @@ header {
   font-weight: 500;
   line-height: 1.3;
 }
+
+/* Section Services */
 /*# sourceMappingURL=style.css.map */
