--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,8 @@ $font-main: 'Roboto', sans-serif;
 $font-two: 'Great Vibes', cursive; /* Golden */
 $font-three: 'Lora', serif; 
 $color-one: #fed136;  /* yellow */
-$color-two: #f7f7f7;  /* v.light grey */
+$color-two: #f7f7f7;  /* v.light grey for background */
+$color-four: #6c757d; /* light grey for text */
 
 
 
@@ -16,23 +17,24 @@ $color-two: #f7f7f7;  /* v.light grey */
 body {
   margin: 0;
   font-family: $font-main;
-  font-size: 16px;
+  font-size: 13px;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: $color-four;
   text-align: left;
   background-color: #fff;
 }
+.container {
+    height: 100vh;
+}
+/* Header */
 header{
+    color: #fff;
     background-image: url(https://i.postimg.cc/Tw2C8cNY/header-bg.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    height: 100vh;
     
-}
-.container {
-    color: #fff;
 }
 .name {
     font-weight: 600;
@@ -47,7 +49,6 @@ header{
 }
 .list-group {
     margin-top: 25px;
-    font-size: 13px;
 }
 .list-group > li {
     display: inline-block;
@@ -96,7 +97,7 @@ header{
     font-weight: 400;
     padding: 100px 0 0;
     text-transform: capitalize;
-    margin-bottom: 5px;
+    margin-bottom: 7px;
 }
 .splash h1 {
     font-size: 4.5rem;
@@ -120,3 +121,4 @@ header{
     font-weight: 500;
     line-height: 1.3;
 }
+/* Section Services */
