--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 13px;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.3;
   color: #6c757d;
   text-align: left;
   background-color: #fff;
@@ -40,7 +40,6 @@ header {
   font-family: "Great Vibes", cursive;
   padding: 0 0 0 100px;
   letter-spacing: 4px;
-  line-height: 1.3;
 }
 
 .list-group {
@@ -121,8 +120,15 @@ header {
   background-color: #fed136;
   text-transform: uppercase;
   font-weight: 500;
-  line-height: 1.3;
 }
 
 /* Section Services */
+.section-title {
+  color: #000;
+  font-size: 2.3rem;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin: 100px auto 0;
+}
 /*# sourceMappingURL=style.css.map */
