--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@ body {
   font-family: $font-main;
   font-size: 13px;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.3;
   color: $color-four;
   text-align: left;
   background-color: #fff;
@@ -44,7 +44,6 @@ header{
     font-family: $font-two;
     padding: 0 0 0 100px;
     letter-spacing: 4px;
-    line-height: 1.3;
     
 }
 .list-group {
@@ -119,6 +118,14 @@ header{
     background-color: $color-one;
     text-transform: uppercase;
     font-weight: 500;
-    line-height: 1.3;
 }
 /* Section Services */
+
+.section-title {
+    color: #000;
+    font-size: 2.3rem;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin: 100px auto 0;
+}
