Add style for subtitle

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -129,3 +129,11 @@ header{
     letter-spacing: 2px;
     margin: 100px auto 0;
 }
+.subtitle {
+    font-family: $font-three;
+    text-align: center;
+    font-style: italic;
+    font-size: 0.9rem;
+    margin: 0.55rem;
+    letter-spacing: 0.06rem;
+}
