--- a/css/style.css
+++ b/css/style.css
@@ -131,4 +131,13 @@ header {
   letter-spacing: 2px;
   margin: 100px auto 0;
 }
+
+.subtitle {
+  font-family: "Lora", serif;
+  text-align: center;
+  font-style: italic;
+  font-size: 0.9rem;
+  margin: 0.55rem;
+  letter-spacing: 0.06rem;
+}
 /*# sourceMappingURL=style.css.map */
