--- a/sass/style.scss
+++ b/sass/style.scss
@@ -137,3 +137,9 @@ header{
     margin: 0.55rem;
     letter-spacing: 0.06rem;
 }
+.column {
+    text-align: center;
+    padding: 35px;
+    margin: 60px auto;
+    
+}
