--- a/css/style.css
+++ b/css/style.css
@@ -157,4 +157,10 @@ header {
   border: 2px solid #fed136;
   border-radius: 50%;
 }
+
+.column-title {
+  font-weight: 700;
+  color: #000;
+  font-size: 1.15rem;
+}
 /*# sourceMappingURL=style.css.map */
