--- a/sass/style.scss
+++ b/sass/style.scss
@@ -153,3 +153,8 @@ header{
     border: 2px solid $color-one;
     border-radius: 50%;
 }
+.column-title {
+    font-weight: 700;
+    color: #000;
+    font-size: 1.15rem;
+}
