--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,6 +26,7 @@ body {
 }
 .container {
     height: 100vh;
+    max-width: 1000px;
 }
 /* Header */
 header{
@@ -65,7 +66,7 @@ header{
     color: $color-one;
 }
 
-    /* inside list */
+            /* inside list */
 
 .inside-list {
     display: block;
@@ -140,7 +141,7 @@ header{
 .column {
     text-align: center;
     padding: 35px;
-    margin: 60px auto;
+    margin: 27px auto;
     
 }
 .column i {
