Add style for page footer

--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ header {
   max-width: 288px;
 }
 
-.column i {
+.services i {
   color: #fed136;
   font-size: 32px;
   background: inherit;
@@ -184,6 +184,7 @@ header {
 /* Portfolio */
 .portfolio {
   background-color: #f7f7f7;
+  padding-bottom: 5.7rem;
 }
 
 .column-subtitle {
@@ -195,5 +196,45 @@ header {
   padding: 0 0 20px;
   letter-spacing: 0.06rem;
   line-height: 1.2;
+}
+
+/* Footer */
+footer {
+  padding: 1.2rem 0;
+}
+
+footer .column {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  max-height: 2.25rem;
+}
+
+.social-link {
+  max-height: 2.25rem;
+  margin: 0 0.5rem;
+}
+
+.social-link a {
+  font-size: 0;
+}
+
+.social-link i {
+  color: #fff;
+  font-size: 1.5rem;
+  background-color: #000;
+  width: 2.25rem;
+  height: 2.25rem;
+  line-height: 2.25rem;
+  border-radius: 50%;
+}
+
+footer p {
+  font-weight: 500;
 }
 /*# sourceMappingURL=style.css.map */
