--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,14 @@ body {
   max-width: 1000px;
 }
 
+.column {
+  text-align: center;
+  margin: 30px 15px;
+  background-color: #fff;
+  padding: 0;
+  max-width: 288px;
+}
+
 /* Header */
 header {
   height: 100vh;
@@ -132,6 +140,10 @@ header {
 }
 
 /* Section Services */
+.services .column {
+  margin: 30px 15px 100px;
+}
+
 .section-title {
   color: #000;
   font-size: 2.3rem;
@@ -148,14 +160,6 @@ header {
   font-size: 0.9rem;
   margin: 0.55rem auto 2.4rem;
   letter-spacing: 0.06rem;
-}
-
-.column {
-  text-align: center;
-  margin: 30px 15px;
-  background-color: #fff;
-  padding: 0;
-  max-width: 288px;
 }
 
 .services i {
