--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ body {
   max-width: 288px;
 }
 
+.row {
+  -ms-flex-pack: center;
+      justify-content: center;
+}
+
 /* Header */
 header {
   height: 100vh;
@@ -83,7 +88,6 @@ header {
   color: #fed136;
 }
 
-/* inside list */
 .inside-list {
   display: block;
   position: absolute;
