--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,6 +34,9 @@ body {
     padding: 0;
     max-width: 288px;
 }
+.row {
+    justify-content: center;
+}
 /* Header */
 header{
     height: 100vh;
@@ -80,8 +83,6 @@ header{
 .navbar a:hover p {
     color: $color-one;
 }
-
-            /* inside list */
 
 .inside-list {
     display: block;
