--- a/sass/style.scss
+++ b/sass/style.scss
@@ -230,17 +230,17 @@ footer p {
     }
     .list-group {
         margin-top: 0;
+        justify-content: center;
     }
     .list-group > li {
         font-size: 0.7rem;
     }
     .splash h2 {
         font-size: 1.5rem;
-        margin: 25px auto 15px;
+        margin: 120px auto 20px;
     }
     .splash h1 {
         font-size: 2rem;
-        text-transform: uppercase;
         margin: 0 0 30px;
         letter-spacing: 2px;
         padding-bottom: 10px;
@@ -249,6 +249,55 @@ footer p {
         margin: 20px auto 0 auto;
         padding: 10px 20px;
         font-size: 12px;
+    }
+    .services .column {
+        margin: 30px 15px 0px;
+    }
+    .services .column:last-child {
+        margin: 30px 15px 50px;
+    }
+    .section-title {
+        font-size: 1.5rem;
+        letter-spacing: 1px;
+        margin: 50px auto 0;
+    }
+    
+    footer .column {
+        max-height: 1.5rem;
+        margin: 15px;
+    }
+    footer {
+        padding: 0.5rem 0;
+    }
+    .portfolio {
+        padding-bottom: 2rem;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .name {
+        font-size: 20px;
+        padding: 0;
+        margin: 20px auto 5px;
+    }
+    .list-group {
+        margin-top: 0;
+        justify-content: center;
+    }
+    .splash h2 {
+        font-size: 2rem;
+        margin: 80px auto 35px;
+    }
+    .splash h1 {
+        font-size: 3rem;
+        margin: 0 0 40px;
+        letter-spacing: 2px;
+        padding-bottom: 10px;
+    }
+    .button {
+        margin: 20px auto 0 auto;
+        padding: 15px 25px;
+        font-size: 16px;
     }
     .services .column {
         margin: 30px 15px 0px;
